# bno08x-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  bitbucket-pipelines.yml  sonar-project.properties
.config/: nextest.toml
.github/scripts/: generate_sbom.sh
.github/workflows/: build.yml  release.yml  sbom.yml  test.yml
examples/: minimal_test.rs
src/: constants.rs  driver.rs  frs.rs  lib.rs  main.rs  peripherals_nrf52.rs  reports.rs  wrapper.rs
src/interface/: delay.rs  gpio.rs  log.rs  mod.rs  spi.rs  spidev.rs
tests/: hardware_integration.rs
