[package]
name = "bno08x"
description = "BNO08x IMU User Space Driver"
repository = "https://github.com/EdgeFirstAI/bno08x"
license = "Apache-2.0"
version = "1.0.1"
edition = "2021"
readme = "README.md"

[[bin]]
name = "bno08x"
path = "src/main.rs"

[[bin]]
name = "bno08x-frs"
path = "src/frs.rs"

[lib]
name = "bno08x"
path = "src/lib.rs"

[dependencies]
gpiod = "0.3.0"
log = "0.4.25"
spidev = "0.6.0"

[features]
default = []
