[package]
name = "bno08x-rs"
description = "BNO08x IMU User Space Driver"
repository = "https://github.com/EdgeFirstAI/bno08x-rs"
documentation = "https://docs.rs/bno08x-rs"
license = "Apache-2.0"
version = "2.0.0"
edition = "2021"
readme = "README.md"
keywords = ["imu", "sensor", "bno08x", "embedded", "spi"]
categories = ["hardware-support", "embedded"]
authors = ["Au-Zone Technologies Inc."]
homepage = "https://edgefirst.ai/"
rust-version = "1.90"

exclude = ["sonar-project.properties", ".github/"]

[lib]
name = "bno08x_rs"
path = "src/lib.rs"

[features]
default = []

[dependencies]
gpiod = "0.3.0"
log = "0.4.25"
spidev = "0.7.1"

[dev-dependencies]
env_logger = "0.11"

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Cargo profiles
# Reference: ~/Documents/SPS/11-cicd-pipelines.md

[profile.profiling]
# Inherits from release but with debug symbols for coverage/profiling
inherits = "release"
debug = true
